added dynamic blog

--- a/src/content/blog/the-tools-we-love.mdx
+++ b/src/content/blog/the-tools-we-love.mdx
@@ -1,9 +1,8 @@
 ---
 title: "The Tools We Love"
 excerpt: "A curated list of our favorite development tools and creative resources."
-date: "2024-11-28"
-author: "Partner A"
-readTime: "4 min read"
+date: "2025-05-20"
+author: "Purva Desai"
 ---
 
 After years of experimenting with different tools and workflows, we've settled on a core set of applications and services that power our creative process. Here's our current toolkit and why we love each piece.
@@ -12,25 +11,15 @@ After years of experimenting with different tools and workflows, we've settled o
 
 ### Code Editors
 - **VS Code** - Our primary editor with a carefully curated set of extensions
-- **Cursor** - For AI-assisted coding when we need a creative boost
-- **Vim** - Still the fastest way to edit config files and quick scripts
+- **PyCharm** - Better than VS Code but not for everytone, mainly used for Python
 
 ### Terminal & Shell
-- **iTerm2** with **Oh My Zsh** - Beautiful, customizable, and powerful
-- **tmux** - Essential for managing multiple sessions and pair programming
-- **fzf** - Fuzzy finding everything from files to command history
+- **Ghostty** with **Oh My Zsh** - Beautiful, customizable, powerful and fast
 
 ## Design & Creativity
 
 ### Visual Design
-- **Figma** - Our go-to for UI design and collaborative mockups
 - **Excalidraw** - Perfect for quick sketches and system diagrams
-- **Canva** - When we need something polished quickly
-
-### Color & Typography
-- **Coolors.co** - Generating and exploring color palettes
-- **Google Fonts** - Reliable typography that works everywhere
-- **Contrast** - Ensuring our designs are accessible
 
 ## Development Stack
 
@@ -38,75 +27,54 @@ After years of experimenting with different tools and workflows, we've settled o
 - **Next.js** - Our framework of choice for React applications
 - **Tailwind CSS** - Utility-first styling that speeds up development
 - **Framer Motion** - When we need smooth animations and interactions
+- **v0.dev** - AI coding tool to fast prototyping/MVP and beautiful designs
 
 ### Backend & Database
 - **Supabase** - Postgres database with real-time features and auth
-- **Vercel** - Deployment and hosting that just works
-- **Upstash** - Redis for caching and rate limiting
+- **Turso** - Sqlite database lightweight and fast operation
+- **FastAPI** - FastAPI is modern and comes with better tooling
+- **ORM** - We use `SQLAlchemy` mainly but when Sahil gets frustrated with it's annoyance he switches to `Djnago ORM`
 
 ### APIs & Services
-- **OpenAI API** - For adding AI capabilities to our projects
-- **Resend** - Reliable email delivery for transactional emails
-- **Stripe** - Payment processing when we need to monetize
+- **Clerk** - For reliable and best in class auth service
+- **Vercel** - Deployment and hosting that just works (including this one)
+- **Github** - Think yourself!
 
 ## Productivity & Collaboration
 
 ### Project Management
 - **Notion** - Our second brain for documentation and planning
-- **Linear** - Issue tracking that doesn't get in the way
-- **GitHub Projects** - For managing code-related tasks
 
 ### Communication
-- **Discord** - Quick voice calls and screen sharing
-- **Loom** - Async video communication for complex topics
-- **Slack** - When we need threaded conversations
+- **Whatsapp** - Quick voice calls and screen sharing
+- **Google Meets** - Async video communication for complex topics
 
 ## Creative Inspiration
 
 ### Learning & Research
 - **YouTube** - Endless tutorials and conference talks
-- **Dev.to** - Community-driven technical content
-- **Dribbble** - Visual inspiration for UI design
+- **Dev.to/Hashnode** - Community-driven technical content
 
-### Experimentation
-- **CodePen** - Quick prototypes and CSS experiments
-- **Observable** - Data visualization and interactive notebooks
-- **Replit** - When we need to test something in a different language
+## Computers & Accessories | Sahil
 
-## Hardware & Setup
+- **MacBook M2 Air** - Primary development machine
+- **Freestyle2 for Mac** - Better for yoru hands and argonomics
+- **MX Master 3S** - Better for yoru hands and argonomics, mainly he likes it.
+- **HP Display** - You can't work on 13" laptop
+- **Motiongrey Standing desk** - Health and energy during long coding sessions
 
-### Computers
-- **MacBook Pro M2** - Primary development machine
-- **iPad Pro** - For sketching and reading documentation
-- **Mechanical keyboard** - Because typing should feel good
+## Computers & Accessories | Purva
 
-### Accessories
-- **Dual monitors** - More screen real estate for complex projects
-- **Good headphones** - Essential for focus and video calls
-- **Standing desk** - Health and energy during long coding sessions
+- **HP Chromebook** - Primary development machine
+- **Logitech K585 Slim Combo** - It comes in pink
+- **Asus Display** - Better for Sahil's code review.
+- **Standing desk** - She just sits though.
 
-## The Philosophy Behind Our Choices
-
-We prioritize tools that:
-- **Reduce friction** between idea and implementation
-- **Enable collaboration** without forcing it
-- **Scale with our needs** from prototype to production
-- **Have strong communities** and good documentation
-- **Integrate well** with our existing workflow
-
-## What We're Exploring
-
-Our toolkit is always evolving. Currently, we're experimenting with:
-- **Bun** - Faster JavaScript runtime and package manager
-- **Astro** - For content-heavy sites that need to be fast
-- **Tauri** - Building desktop apps with web technologies
-- **Deno** - Alternative JavaScript runtime with better defaults
 
 ## Conclusion
 
 The best tools are the ones you don't have to think about. They fade into the background and let you focus on creating. While it's tempting to constantly chase the newest, shiniest tools, we've found that mastering a smaller set of reliable options is more valuable than being a jack-of-all-trades with dozens of half-learned applications.
 
 That said, we're always open to trying new things. If you have a tool that's transformed your workflow, we'd love to hear about it!
-\`\`\`
 
 Now let's update the blog library to read from MDX files:
